[workspace]
resolver = "2"
members = ["mulan-cli"]
default-members = ["mulan-cli"]

[workspace.package]
version = "0.0.0"
authors = ["Asqar Arslanov"]
description = "An innovative multi-language framework"
license-file = "LICENSE"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

[workspace.dependencies]
anyhow = "1.0.89"
