[workspace]
resolver = "2"
members = ["mulan-cli", "mulan-config", "mulan-parser", "mulan-rust"]
default-members = ["mulan-cli"]

[workspace.package]
version = "0.0.0"
authors = ["Asqar Arslanov"]
description = "An innovative multi-language framework"
readme = true
repository = "https://github.com/asqarslanov/mulan"
license-file = "LICENSE"
keywords = ["i18n", "mulan"]
categories = ["command-line-utilities", "internationalization"]

[workspace.dependencies]
anyhow = "1.0.89"
serde = { version = "1.0.210", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive"] }

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
