[package]
name = "mulan"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license-file.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
clap = { version = "4.5.19", features = ["cargo", "derive"] }
inquire = "0.7.5"
strum = { version = "0.26.3", features = ["derive"] }

[lints]
workspace = true
