[package]
name = "mulan"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license-file.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
clap = { version = "4.5.19", features = ["cargo", "derive"] }
cliclack = "0.3.5"
console = "0.15.8"
ctrlc = "3.4.5"
mulan-config.path = "../mulan-config"
mulan-parser.path = "../mulan-parser"
mulan-rust.path = "../mulan-rust"
strum.workspace = true

[lints]
workspace = true
