[package]
name = "mulan-config"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license-file.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde.workspace = true
toml = "0.8.19"

[lints]
workspace = true
