[package]
name = "mulan-parser"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license-file.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
serde = { version = "1.0.210", features = ["derive"] }

[lints]
workspace = true
