[package]
name = "mulan-parser"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license-file.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
json5 = "0.4.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

[lints]
workspace = true
