[package]
name = "mulan-rust"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license-file.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
strum.workspace = true
thiserror = "1.0.64"

[lints]
workspace = true
